--- a/pom.xml
+++ b/pom.xml
@@ -102,29 +102,29 @@
 					<skipTests>true</skipTests>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.20</version>
-				<configuration>
-					<skipITs>true</skipITs>
-					<includes>
-						<include>**/*IT.java</include>
-					</includes>
-					<additionalClasspathElements>
-						<additionalClasspathElement>${basedir}/target/classes</additionalClasspathElement>
-					</additionalClasspathElements>
-					<parallel>none</parallel>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-failsafe-plugin</artifactId>-->
+<!--				<version>2.20</version>-->
+<!--				<configuration>-->
+<!--					<skipITs>true</skipITs>-->
+<!--					<includes>-->
+<!--						<include>**/*IT.java</include>-->
+<!--					</includes>-->
+<!--					<additionalClasspathElements>-->
+<!--						<additionalClasspathElement>${basedir}/target/classes</additionalClasspathElement>-->
+<!--					</additionalClasspathElements>-->
+<!--					<parallel>none</parallel>-->
+<!--				</configuration>-->
+<!--				<executions>-->
+<!--					<execution>-->
+<!--						<goals>-->
+<!--							<goal>integration-test</goal>-->
+<!--							<goal>verify</goal>-->
+<!--						</goals>-->
+<!--					</execution>-->
+<!--				</executions>-->
+<!--			</plugin>-->
 		</plugins>
 	</build>
 
